--- a/roles/init/tasks/main.yml
+++ b/roles/init/tasks/main.yml
@@ -15,8 +15,8 @@
 ##      copy: src=./ssh/authorized_keys.log dest=/root/.ssh/authorized_keys mode=0600
 
 - name: disable selinux
-  copy:
-    src: ../packages/etc/selinux/config
+  template:
+    src: config.j2
     dest: /etc/selinux/config
     mode: 0644
 
