--- a/install.yml
+++ b/install.yml
@@ -1,6 +1,6 @@
 ---
-- name: 安装bind
-  hosts: '11'
-  remote_user: root
-  roles:
-    - bind
+#- name: 安装bind
+#  hosts: '11'
+#  remote_user: root
+#  roles:
+#    - bind
