--- a/roles/cert/tasks/main.yml
+++ b/roles/cert/tasks/main.yml
@@ -43,13 +43,13 @@
     chdir: /opt/certs
 
 - name: 创建etcd基于根证书的ca-config文件，因为etcd也是需要通过ssl通信的
-  copy:
+  template:
     src: ca-config.json.j2
     dest: /opt/certs/ca-config.json
     mode: 0644
 
 - name: 创建etcd基于根证书的etcd-peer-csr文件
-  copy:
+  template:
     src: etcd-peer-csr.json.j2
     dest: /opt/certs/etcd-peer-csr.json
     mode: 0644
