--- a/roles/kubelet/tasks/main.yml
+++ b/roles/kubelet/tasks/main.yml
@@ -69,7 +69,7 @@
     mode: 0755
 
 - name: 创建kubelet.ini配置文件
-  copy:
+  template:
     src: kube-kubelet.ini.j2
     dest: /etc/supervisord.d/kube-kubelet.ini
     mode: 0644
