--- a/roles/init/tasks/main.yml
+++ b/roles/init/tasks/main.yml
@@ -74,6 +74,12 @@
   shell: named-checkconf
   when: inventory_hostname == 'hdss7-11'
 
+- name: 修改网卡的DNS为7-11的IP（自建的DNS）
+  lineinfile:
+    dest: /etc/sysconfig/network-scripts/ifcfg-eth0
+    regexp: '^DNS1'
+    line: 'DNS1={{ node11 }}'
+
 - name: 启动named服务并设置为开机自启动
   shell: systemctl start named && systemctl enable named
   when: inventory_hostname == 'hdss7-11'
