--- a/install.yml
+++ b/install.yml
@@ -1,9 +1,9 @@
 ---
-- name: 安装docker
-  hosts: docker
-  remote_user: root
-  roles:
-    - docker
+#- name: 安装docker
+#  hosts: docker
+#  remote_user: root
+#  roles:
+#    - docker
 
 - name: 部署证书
   hosts: '200'
@@ -12,47 +12,41 @@
   roles:
     - cert
 
-- name: 安装harbor
-  hosts: '200'
-  gather_facts: no
-  remote_user: root
-  roles:
-    - cert
-
-- name: 在7-11增加记录
-  hosts: '11'
-  gather_facts: no
-  remote_user: root
-  roles:
-    - named
-
-- name: 安装etcd
-  hosts: etcd
+#- name: 在7-11增加记录
+#  hosts: '11'
 #  gather_facts: no
-  remote_user: root
-  roles:
-    - etcd
-
-- name: 安装nginx
-  hosts: nginx
-#  gather_facts: no
-  remote_user: root
-  roles:
-    - nginx
-
-- name: 安装keepalived
-  hosts: keepalived
-#  gather_facts: no
-  remote_user: root
-  roles:
-    - keepalived
+#  remote_user: root
+#  roles:
+#    - named
+#
+#- name: 安装etcd
+#  hosts: etcd
+##  gather_facts: no
+#  remote_user: root
+#  roles:
+#    - etcd
+#
+#- name: 安装nginx
+#  hosts: nginx
+##  gather_facts: no
+#  remote_user: root
+#  roles:
+#    - nginx
+#
+#- name: 安装keepalived
+#  hosts: keepalived
+##  gather_facts: no
+#  remote_user: root
+#  roles:
+#    - keepalived
 
 - name: 部署k8s node节点
   hosts: k8s-node
 #  gather_facts: no
   remote_user: root
   roles:
-    - apiserver
-    - controller-manager
-    - scheduler
-    - kubelet
+#    - apiserver
+#    - controller-manager
+#    - scheduler
+#    - kubelet
+    - kube-proxy
