--- a/install.yml
+++ b/install.yml
@@ -4,14 +4,14 @@
 #  remote_user: root
 #  roles:
 #    - docker
-
-- name: 部署证书
-  hosts: '200'
-  gather_facts: no
-  remote_user: root
-  roles:
-    - cert
-
+#
+#- name: 部署证书
+#  hosts: '200'
+#  gather_facts: no
+#  remote_user: root
+#  roles:
+#    - cert
+#
 #- name: 在7-11增加记录
 #  hosts: '11'
 #  gather_facts: no
@@ -39,14 +39,26 @@
 #  remote_user: root
 #  roles:
 #    - keepalived
-
-- name: 部署k8s node节点
-  hosts: k8s-node
-#  gather_facts: no
-  remote_user: root
-  roles:
+#
+#- name: 部署k8s node节点
+#  hosts: k8s-node
+##  gather_facts: no
+#  remote_user: root
+#  roles:
 #    - apiserver
 #    - controller-manager
 #    - scheduler
 #    - kubelet
-    - kube-proxy
+#    - kube-proxy
+#
+#- name: 重启11网卡
+#  hosts: '11'
+#  remote_user: root
+#  roles:
+#    - network
+
+- name: 安装flannel网络插件
+  hosts: flannel
+  remote_user: root
+  roles:
+    - flannel
