--- a/install.yml
+++ b/install.yml
@@ -1,82 +1,94 @@
----
-- name: 安装docker
-  hosts: docker
-  remote_user: root
-  roles:
-    - docker
-
-- name: 部署证书
-  hosts: '200'
-  gather_facts: no
-  remote_user: root
-  roles:
-    - cert
-
-- name: 在7-11增加记录
-  hosts: '11'
-  gather_facts: no
-  remote_user: root
-  roles:
-    - named
-
-- name: 安装etcd
-  hosts: etcd
+#---
+#- name: 安装docker
+#  hosts: docker
+#  remote_user: root
+#  roles:
+#    - docker
+#
+#- name: 部署证书
+#  hosts: '200'
 #  gather_facts: no
-  remote_user: root
-  roles:
-    - etcd
-
-- name: 安装nginx
-  hosts: nginx
+#  remote_user: root
+#  roles:
+#    - cert
+#
+#- name: 在7-11增加记录
+#  hosts: '11'
 #  gather_facts: no
-  remote_user: root
-  roles:
-    - nginx
+#  remote_user: root
+#  roles:
+#    - named
+#
+#- name: 安装etcd
+#  hosts: etcd
+##  gather_facts: no
+#  remote_user: root
+#  roles:
+#    - etcd
+#
+#- name: 安装nginx
+#  hosts: nginx
+##  gather_facts: no
+#  remote_user: root
+#  roles:
+#    - nginx
+#
+#- name: 安装keepalived
+#  hosts: keepalived
+##  gather_facts: no
+#  remote_user: root
+#  roles:
+#    - keepalived
+#
+#- name: 部署k8s node节点
+#  hosts: k8s-node
+##  gather_facts: no
+#  remote_user: root
+#  roles:
+#    - apiserver
+#    - controller-manager
+#    - scheduler
+#    - kubelet
+#    - kube-proxy
+#
+#- name: 重启11网卡
+#  hosts: '11'
+#  remote_user: root
+#  roles:
+#    - network
+#
+#- name: 检查集群
+#  hosts: check
+#  remote_user: root
+#  roles:
+#    - check
+#
+#- name: 安装flannel网络插件
+#  hosts: flannel
+#  remote_user: root
+#  roles:
+#    - flannel
+#
+#- name: 安装coreDNS
+#  hosts: coreDNS
+#  remote_user: root
+#  roles:
+#    - coreDNS
+#
+#- name: 安装ingress
+#  hosts: ingress
+#  remote_user: root
+#  roles:
+#    - ingress
 
-- name: 安装keepalived
-  hosts: keepalived
-#  gather_facts: no
+- name: 安装jdk
+  hosts: java
   remote_user: root
   roles:
-    - keepalived
+    - jdk
 
-- name: 部署k8s node节点
-  hosts: k8s-node
-#  gather_facts: no
+- name: 安装zookeeper
+  hosts: zk
   remote_user: root
   roles:
-    - apiserver
-    - controller-manager
-    - scheduler
-    - kubelet
-    - kube-proxy
-
-- name: 重启11网卡
-  hosts: '11'
-  remote_user: root
-  roles:
-    - network
-
-- name: 检查集群
-  hosts: check
-  remote_user: root
-  roles:
-    - check
-
-- name: 安装flannel网络插件
-  hosts: flannel
-  remote_user: root
-  roles:
-    - flannel
-
-- name: 安装coreDNS
-  hosts: coreDNS
-  remote_user: root
-  roles:
-    - coreDNS
-
-- name: 安装ingress
-  hosts: ingress
-  remote_user: root
-  roles:
-    - ingress
+    - zookeeper
