--- a/roles/jdk/tasks/main.yml
+++ b/roles/jdk/tasks/main.yml
@@ -18,7 +18,7 @@
 #    creates: /usr/local/java/jdk1.8.0_91
 
 - name: 做Java软链接，方便以后升级
-  shell: ln -s /opt/jdk1.8.0_91 /usr/local/java/jdk
+  shell: ln -s /opt/jdk1.8.0_91 /usr/local/java
   ignore_errors: yes
 
 - name: 配置Java环境变量
@@ -27,7 +27,7 @@
     regexp: '^{{ item.old }}'
     line: '{{ item.new }}'
   with_items:
-    - { old: 'export JAVA_HOME=', new: 'export JAVA_HOME=/usr/local/java/jdk' }
+    - { old: 'export JAVA_HOME=', new: 'export JAVA_HOME=/usr/local/java' }
     - { old: 'export JRE_HOME=$JAVA_HOME/jre', new: 'export JRE_HOME=$JAVA_HOME/jre' }
     - { old: 'export CLASSPATH=$JAVA_HOME', new: 'export CLASSPATH=$JAVA_HOME/lib:$JAVA_HOME/lib/tools.jar' }
     - { old: 'export PATH=$JAVA_HOME', new: 'export PATH=$JAVA_HOME/bin:$JRE_HOME/bin:$PATH' }
