--- a/roles/jdk/tasks/main.yml
+++ b/roles/jdk/tasks/main.yml
@@ -1,39 +1,9 @@
 ---
-- name: 创建java目录
-  shell: mkdir -p /usr/local/java
-
-- name: 上传zookeeper
-  copy:
-    src: ../../../src/jdk-8u91-linux-x64.tar.gz
-    dest: /opt/src/jdk-8u91-linux-x64.tar.gz
-    mode: 0644
-
-- name: 解压zookeeper
-  shell: tar -zxvf /opt/src/jdk-8u91-linux-x64.tar.gz -C /opt
-
-#- name: 解压jdk，这种方式运行效率比较低
-#  unarchive:
-#    src: ../../../packages/opt/src/jdk-8u91-linux-x64.tar.gz
-#    dest: /usr/local/java
-#    creates: /usr/local/java/jdk1.8.0_91
-
-- name: 做Java软链接，方便以后升级
-  shell: ln -s /opt/jdk1.8.0_91 /usr/local/java
-  ignore_errors: yes
-
-- name: 配置Java环境变量
-  lineinfile:
-    dest: /etc/profile
-    regexp: '^{{ item.old }}'
-    line: '{{ item.new }}'
-  with_items:
-    - { old: 'export JAVA_HOME=', new: 'export JAVA_HOME=/usr/local/java' }
-    - { old: 'export JRE_HOME=$JAVA_HOME/jre', new: 'export JRE_HOME=$JAVA_HOME/jre' }
-    - { old: 'export CLASSPATH=$JAVA_HOME', new: 'export CLASSPATH=$JAVA_HOME/lib:$JAVA_HOME/lib/tools.jar' }
-    - { old: 'export PATH=$JAVA_HOME', new: 'export PATH=$JAVA_HOME/bin:$JRE_HOME/bin:$PATH' }
+- name: yum安装java
+  shell: yum install -y java-1.8.0-openjdk*
 
 - name: 查看Java版本
-  shell: source /etc/profile && java -version
+  shell: java -version
   register: std_out
   ignore_errors: yes
 
