update password config

--- a/roles/apiserver/tasks/main.yml
+++ b/roles/apiserver/tasks/main.yml
@@ -25,7 +25,7 @@
   shell: mkdir -p /opt/kubernetes/server/bin/cert
 
 - name: 将运维主机上的证书拷贝到k8s节点上
-  shell: sshpass -p '1' scp -oStrictHostKeyChecking=no root@hdss7-200:/opt/certs/*.pem /opt/kubernetes/server/bin/cert
+  shell: sshpass -p '{{ password }}' scp -oStrictHostKeyChecking=no root@hdss7-200:/opt/certs/*.pem /opt/kubernetes/server/bin/cert
 
 - name: 在k8s机器上安装conf文件
   shell: mkdir -p /opt/kubernetes/server/bin/conf
