--- a/roles/zookeeper/tasks/main.yml
+++ b/roles/zookeeper/tasks/main.yml
@@ -50,6 +50,10 @@
   shell: systemctl restart named && systemctl restart network
   when: inventory_hostname == 'hdss7-11'
 
+- name: 重启keepalived
+  shell: systemctl restart keepalived
+  when: inventory_hostname != 'hdss7-21'
+
 - name: 启动zookeeper
   shell: /opt/zookeeper/bin/zkServer.sh start
 
